# high_inertia_sim

./: .gitignore  README.md  remarks.txt
kuka dynamic model/: lwr4_coriolis.h  lwr4_fkine.h  lwr4_friction.h  lwr4_gravity.h  lwr4_inertia.h  lwr4_jacob.h  lwr4p_dynamics.cpp  mat2cpp.m
src/lib/gui_lib/include/gui_lib/: view_wrench_dialog.h
src/lib/gui_lib/src/: view_wrench_dialog.cpp
src/lib/math_lib/src/: math.cpp  quaternions.cpp
src/lib/robo_lib/include/robo_lib/: kinematic_chain.h
src/lib/robo_lib/src/: kinematic_chain.cpp
src/lib/rviz_lib/include/rviz_lib/: rviz_publisher.h
src/lib/rviz_lib/src/: rviz_publisher.cpp
src/lwr4p/: CMakeLists.txt  package.xml
src/lwr4p/include/lwr4p/: robot.h  utils.h
src/lwr4p/src/: robot.cpp
src/project_name_/: CMakeLists.txt  package.xml
src/project_name_/config/: sim_params.yaml
src/project_name_/config/execution/: move2targets_params.yaml  pick&place_params.yaml  pih_targets_params.yaml
src/project_name_/config/gui_params/: exec_gui_params.yaml  train_gui_params.yaml
src/project_name_/config/matlab/: exec_1D.fig  exec_3D_orient.fig  exec_3D_pos.fig  pick2_1D.eps  pick2_1D.fig  pih_1D_bidrive_results_plot.m  pih_1D_wrong_target_results_plot.m  pih_3D_results_plot.m  place1_1D.eps  place1_1D.fig  place2_1D.eps  place2_1D.fig  plot1D.m  plot_results.m  plot_train_data.m  reverse_train_data.m  set_matlab_utils_path.m  temp.m
src/project_name_/config/urdf/: lwr4pRobot_mini40_phriTool.xacro
src/project_name_/include/project_name_/: main.cpp  main_ctrl.cpp  main_ctrl.h  robot_obj_sim.h  ur_wrapper.h  utils.h
src/project_name_/include/project_name_/gui/: handle_wrenches_gui.h  main_gui.cpp  main_gui.h  train_slider.cpp  train_slider.h  wrench_ctrl_gui.cpp  wrench_ctrl_gui.h
src/project_name_/launch/: program.launch  temp.launch
src/project_name_/matlab/: D_adapt_power.eps  D_adapt_vel.eps  D_power_mean_energy.eps  D_power_mean_energy.fig  D_power_vel_energy.eps  all_data.mat  calc_inertia.m  copyPlots.m  plot_logged_data.m  process_all_data.m  rand_exp_order.m  set_matlab_utils_path.m  temp_align.m  trajectory.eps
src/project_name_/matlab/figures/: D_power_mean_energy.eps  D_power_mean_energy.fig  D_power_mean_energy_1.fig  D_power_vel_energy.eps  D_power_vel_energy.fig  damp_adapt.eps  damp_adapt.fig  damp_power.eps  damp_power.fig  trajectory.eps  trajectory.fig
src/project_name_/matlab/figures/human_1/: D_power_mean_energy.eps  D_power_vel_energy.eps  D_power_vel_energy.fig  damp_adapt.eps  damp_adapt.fig  trajectory.eps  trajectory.fig
src/project_name_/matlab/figures/human_2/: D_power_mean_energy.eps  D_power_mean_energy.fig  D_power_vel_energy.eps  D_power_vel_energy.fig  damp_adapt.eps
src/project_name_/rviz/: scene.rviz  scene_temp.rviz
src/project_name_/src/: main.cpp  main_ctrl.cpp  robot_obj_sim.cpp  ur_wrapper.cpp
src/project_name_/urdf/: frame_6DoF.xacro  handle.xacro  lwr4p_obj.xacro  lwr4p_obj_temp.xacro  lwr4p_robot.xacro  object.xacro  ur_robot.xacro
src/robots/robot_wrapper/config/: params.yaml
src/robots/robot_wrapper/include/robot_wrapper/: lwr4p_robot.h
src/robots/robot_wrapper/src/: lwr4p_robot.cpp
src/robots/ur/ur_robot/src/: robot.cpp
src/simulator_robot/lwr4p/: CMakeLists.txt  package.xml
src/simulator_robot/lwr4p/include/lwr4p/: lwr4p_dynamics.h  robot_obj_sim.h  ur_wrapper.h  utils.h
src/simulator_robot/lwr4p/src/: lwr4p_dynamics.cpp  robot_obj_sim.cpp  ur_wrapper.cpp
src/simulator_robot/ur/ur_modern_driver/config/: ur_driver_program.txt
src/simulator_robot/ur/ur_modern_driver/src/: ur_driver.cpp
(+2 files in other folders)
